Bug fix: about color not showing.

--- a/css/styles/style.css
+++ b/css/styles/style.css
@@ -1183,7 +1183,7 @@ nav .fa-solid{
         color: #000000;
     }
 
-    .row{
+    #about .row{
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
